Show link in alert and make buttons primary

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 		<section id="page" style="padding:0">
 
-			<div id="team-choices-container" class="container-hidden">
+			<div id="team-choices-container" class="container container-hidden">
 				<h2>Select Team</h2>
 			</div>
 
