Add note for inviting teammates

--- a/index.html
+++ b/index.html
@@ -92,13 +92,21 @@
 		<section id="page" style="padding:0">
 
 			<div id="team-choices-container" class="container container-hidden">
-				<h2>Select Team</h2>
+				<h3>Team Home Pages</h3>
+				<p>Here's what your team page can help you do:</p>
+				<ul>
+					<li>Keep Omnipointment meetings in one place.</li>
+					<li>Pin important links for the whole team.</li>
+					<li>See feedback from your teammates.</li>
+					<li>And more to come soon...</li>
+				</ul>
+				<h3>Select Team</h3>
 			</div>
 
 			<div id="team-container" class="container-hidden">
 				<h1 class="fill-team"></h1>
-				<p><button id="copy-link" class="btn div--inline btn--ghost">Copy Link</button> This is your team's home base.</p>
-				<div class="container">
+				<p><button class="copy-link btn div--inline btn--ghost">Copy Link</button> This is your team's home base.</p>
+				<div class="container toggle__section toggle__expandable">
 					<h3>Members</h3>
 					<div id="members-container"></div>
 				</div>
