--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
 
 			}
 
+			#user-holder div {
+				text-align: center;
+				margin: 0 auto;
+			}
+
+			#user-holder div:nth-child(1){
+				margin-right: 10px;
+			}
+
 		</style>
 	</head>
 	<body class="body body--landing">
@@ -92,16 +101,23 @@
 
 		<section id="page" style="padding:0">
 
-			<div id="team-choices-container" class="container container-hidden">
-				<h3>Team Home Pages</h3>
-				<p>Here's what your team page can help you do:</p>
-				<ul>
-					<li>Keep Omnipointment meetings in one place.</li>
-					<li>Pin important links for the whole team.</li>
-					<li>See feedback from your teammates.</li>
-					<li>And more to come soon...</li>
-				</ul>
-				<h3>Select Team</h3>
+			<div id="team-choices-container" class="container-hidden">
+				<div class="container">
+					<h3>Select Team</h3>
+					<div id="user-holder"></div>
+					<div id="team-choices"></div>
+				</div>
+				<div class="container">
+					<h3>What is a Team Page?</h3>
+					<p>It's like a home base for your team! Here's what your team page can help you do:</p>
+					<ul>
+						<li>Keep Omnipointment meetings in one place.</li>
+						<li>Pin important links for the whole team.</li>
+						<li>See feedback from your teammates.</li>
+						<li>And more to come soon...</li>
+					</ul>
+					<p>Send your feedback to team@omnipointment.com, we'd love to hear it!</p>
+				</div>
 			</div>
 
 			<div id="team-container" class="container-hidden">
