Change link from messenger to Facebook

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<li>See feedback from your teammates.</li>
 						<li>And more to come soon...</li>
 					</ul>
-					<p>Send us your feedback by <a href="mailto:team@omnipointment.com" target="_blank">email</a>, <a href="https://messenger.com/t/omnipointment" target="_blank">Facebook</a>, or <a id="give-feedback">here</a>, we'd love to hear it!</p>
+					<p>Send us your feedback by <a href="mailto:team@omnipointment.com" target="_blank">email</a>, <a href="https://facebook.com/omnipointment" target="_blank">Facebook</a>, or <a id="give-feedback">here</a>, we'd love to hear it!</p>
 				</div>
 			</div>
 
