Add pinned items

--- a/index.html
+++ b/index.html
@@ -123,13 +123,17 @@
 			<div id="team-container" class="container-hidden">
 				<h1 class="fill-team"></h1>
 				<p><button class="copy-link btn div--inline btn--ghost">Copy Link</button> This is your team's home base.</p>
-				<div class="container toggle__section toggle__expandable">
-					<h3>Members</h3>
-					<div id="members-container"></div>
+				<div class="container">
+					<h3>Pinned Items</h3>
+					<div id="pins-container"></div>
 				</div>
 				<div class="container">
 					<h3>Meetings</h3>
 					<div id="meetings-container"></div>
+				</div>
+				<div class="container">
+					<h3>Members</h3>
+					<div id="members-container"></div>
 				</div>
 			</div>
 
