--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 				right: 15px;
 			}
 
+			.container-closer:hover {
+				cursor: pointer;
+			}
+
 			.btn--block {
 				margin: 10px auto;
 			}
@@ -81,6 +85,15 @@
 
 			#user-holder div:nth-child(1){
 				margin-right: 10px;
+			}
+
+			.pin-remover {
+				color: red;
+				margin-left: 10px;
+			}
+
+			.pin-remover:hover {
+				cursor: pointer;
 			}
 
 		</style>
