--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/vex-theme-os.css">
 		<script type="text/javascript" src="/js/clipboard.js"></script>
 		<script type="text/javascript" src="/js/prometheus.js"></script>
+		<script type="text/javascript" src="xdLocalStorage.min.js"></script>
 		<style type="text/css">
 
 			.container-hidden {
