Make page agnostic

--- a/team.html
+++ b/team.html
@@ -106,7 +106,7 @@
 				<div class="col valign__centered">
 					<div class="row valign u-fullHeight">
 						<div class="logo logo--white u-centerBlock" data-hook="logo">
-							<a href="/" class="u-fullHeight u-fullWidth u-centerBlock"></a>
+							<a onclick="window.location = window.location.origin + window.location.pathname;" class="u-fullHeight u-fullWidth u-centerBlock"></a>
 						</div>
 					</div>
 				</div>
