Add test uid to nothingtoseehere

--- a/nothingtoseehere.html
+++ b/nothingtoseehere.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 	<script type="text/javascript" src="xdLocalStoragePostMessageApi.min.js"></script>
+	<script type="text/javascript">
+
+		var TEST_UID = '568eb4e705d347a26a94ecc4';
+		localStorage.setItem('prometheus_user_omnipointment', TEST_UID);
+
+	</script>
 </head>
 <body>
 	This is the magical iframe.
