Add join message

--- a/team.html
+++ b/team.html
@@ -120,6 +120,7 @@
 					<h3>Select Team</h3>
 					<div id="user-holder"></div>
 					<div id="team-choices"></div>
+					<p>Or ask your teammates for the link to join!</p>
 				</div>
 				<div class="container">
 					<h3>What is a Team Page?</h3>
