--- a/team.html
+++ b/team.html
@@ -24,79 +24,14 @@
 		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-os';</script>
 		<link rel="stylesheet" type="text/css" href="/css/vex.css">
 		<link rel="stylesheet" type="text/css" href="/css/vex-theme-os.css">
+		<link rel="stylesheet" type="text/css" href="/css/team.css">
 		<script type="text/javascript" src="/js/clipboard.js"></script>
 		<script type="text/javascript" src="/js/prometheus.js"></script>
 		<script type="text/javascript" src="/js/xdLocalStorage.min.js"></script>
 		<script type="text/javascript" src="/js/wineglassauth.js"></script>
 		<style type="text/css">
 
-			.container-hidden {
-				display: none;
-			}
 
-			.container-closer {
-				position: absolute;
-				right: 15px;
-			}
-
-			.container-closer:hover {
-				cursor: pointer;
-			}
-
-			.btn--block {
-				margin: 10px auto;
-			}
-
-			.btn--inline {
-				display: inline-block !important;
-				margin: 10px auto;
-				margin-right: 10px;
-			}
-
-			.div--inline {
-				display: inline-block;
-				margin: 10px auto;	
-				margin-right: 10px;
-			}
-
-			.member div:nth-child(1), .member div:nth-child(2) {
-				display: inline-block;
-				vertical-align: top;
-				margin: 10px auto;
-			}
-
-			.member div:nth-child(1) {
-				width: 40px;
-				height: 40px;
-				border-radius: 20px;
-				background-size: 40px 40px !important;
-				background-position: center center;
-			}
-
-			.member div:nth-child(2) {
-				height: 40px;
-				line-height: 40px;
-				margin-left: 15px;
-
-			}
-
-			#user-holder div {
-				text-align: center;
-				margin: 0 auto;
-			}
-
-			#user-holder div:nth-child(1){
-				margin-right: 10px;
-			}
-
-			.pin-remover {
-				color: red;
-				margin-left: 10px;
-			}
-
-			.pin-remover:hover {
-				cursor: pointer;
-			}
 
 		</style>
 	</head>
@@ -161,7 +96,7 @@
 
 		</section>
 
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="team.js"></script>
 
 	</body>
 </html>
