Add three achievements

--- a/team.html
+++ b/team.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-os';</script>
 		<link rel="stylesheet" type="text/css" href="/css/vex.css">
 		<link rel="stylesheet" type="text/css" href="/css/vex-theme-os.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/team.css">
 		<script type="text/javascript" src="/js/clipboard.js"></script>
 		<script type="text/javascript" src="/js/prometheus.js"></script>
