Add new buttons for joining teams

--- a/team.html
+++ b/team.html
@@ -21,9 +21,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
 		<script type="text/javascript" src="/js/vex.combined.min.js"></script>
-		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-os';</script>
+		<script type="text/javascript">vex.defaultOptions.className = 'vex-theme-wireframe';</script>
 		<link rel="stylesheet" type="text/css" href="/css/vex.css">
-		<link rel="stylesheet" type="text/css" href="/css/vex-theme-os.css">
+		<link rel="stylesheet" type="text/css" href="/css/vex-theme-wireframe.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/css/team.css">
 		<script type="text/javascript" src="/js/clipboard.js"></script>
