Listen for newly created meetings and add them to team

--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
 				<h1 class="fill-team"></h1>
 				<p><button class="copy-link btn div--inline btn--ghost">Copy Link</button> This is your team's home base.</p>
 				
-				<div class="toggle">
+				<div class="toggle is-expanded">
 					<div class="toggle__section link" data-hook="toggle">
 						<div class="toggle__header">
 							<h4 class="u-textLeft" data-hook="header">Pinned Items</h4>
