Change meeting column size

--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
 			</div>
 		</header>
 
-		<section id="page" style="padding:0">
+		<section id="page" style="padding:20px">
 
 			<div id="team-choices-container" class="container-hidden">
 				<div class="container">
