--- a/team.html
+++ b/team.html
@@ -34,6 +34,7 @@
 
 			#page {
 				/*background: url('img/purple-triagmonds.png') !important*/
+				padding: 35px 20px;
 			}
 
 			.landingSection--newsroom a {
@@ -49,11 +50,21 @@
 				cursor: pointer;
 			}
 
+			/* Hack to reverse order on desktop view */
+
+			.col-holder .col--onethird-sm {
+				float: right;
+			}
+
+			.col-holder .col--twothirds-sm {
+				float: left;
+			}
+
 		</style>
 	</head>
 	<body class="body body--landing">
 
-		<header class="header header--landing">
+		<!--<header class="header header--landing">
 			<div class="row valign u-fullHeight">
 				<div class="col valign__centered">
 					<div class="row valign u-fullHeight">
@@ -63,9 +74,37 @@
 					</div>
 				</div>
 			</div>
+		</header>-->
+
+		<header class="fixed" data-hook="header" id="header">
+			<div class="row row--condensed valign u-fullHeight">
+				<div class="col col--onefourth u-fullHeight u-textLeft"></div>
+				<div class="col col--onehalf valign__centered">
+					<div class="logo logo--white u-centerBlock" data-hook="logo">
+						<a onclick="window.location = window.location.origin + window.location.pathname;" class="u-fullHeight u-fullWidth u-centerBlock"></a>
+					</div>
+				</div>
+				<div class="col col--onefourth valign__centered">
+					<img class="imageBubble link u-pullRight" data-hook="propic">
+					<!--<div data-anddom-display="" data-anddom-hidden="true" data-hook="dropdown" style="display: none;">
+						<div class="dropdown" style="margin-left: 2em">
+							<div class="dropdown__triangle"></div><a href="/me/meetings">
+							<ul>
+								<li class="dropdown__item">All Meetings</li>
+								<li style="list-style: none; display: inline"></li>
+								<li class="dropdown__item">Your Account</li>
+								<li style="list-style: none; display: inline"></li>
+								<li class="dropdown__item">Promos</li>
+								<li style="list-style: none; display: inline"></li>
+								<li class="dropdown__item">Logout</li>
+							</ul></a>
+						</div>
+					</div>-->
+				</div>
+			</div>
 		</header>
 
-		<section id="page" style="padding:20px">
+		<section id="page">
 
 			<div id="team-choices-container" class="container-hidden">
 				<div class="container">
@@ -101,22 +140,6 @@
 
 				<div class="row col-holder">
 
-					<div class="col col--twothirds-sm">
-
-						<div class="toggle is-expanded">
-							<div class="toggle__section link" data-hook="toggle">
-								<div class="toggle__header">
-									<h2 class="u-textLeft" data-hook="header">Meetings</h2>
-								</div>
-								<div class="toggle__chevron"></div>
-							</div>
-							<div class="toggle__section toggle__expandable" data-hook="content">
-								<div id="meetings-container"></div>
-							</div>
-						</div>
-
-					</div>
-
 					<div class="col col--onethird-sm">
 				
 						<div class="toggle is-expanded">
@@ -140,6 +163,22 @@
 							</div>
 							<div class="toggle__section toggle__expandable" data-hook="content">
 								<div id="members-container"></div>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="col col--twothirds-sm">
+
+						<div class="toggle is-expanded">
+							<div class="toggle__section link" data-hook="toggle">
+								<div class="toggle__header">
+									<h2 class="u-textLeft" data-hook="header">Meetings</h2>
+								</div>
+								<div class="toggle__chevron"></div>
+							</div>
+							<div class="toggle__section toggle__expandable" data-hook="content">
+								<div id="meetings-container"></div>
 							</div>
 						</div>
 
