Any team member can delete a pin

--- a/team.html
+++ b/team.html
@@ -85,7 +85,9 @@
 					</div>
 				</div>
 				<div class="col col--onefourth valign__centered">
-					<img class="imageBubble link u-pullRight" data-hook="propic">
+					<a href="https://www.omnipointment.com/me">
+						<img class="imageBubble link u-pullRight" data-hook="propic">
+					</a>
 					<!--<div data-anddom-display="" data-anddom-hidden="true" data-hook="dropdown" style="display: none;">
 						<div class="dropdown" style="margin-left: 2em">
 							<div class="dropdown__triangle"></div><a href="/me/meetings">
