Track pin clicks

--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
 					</div>
 				</div>
 				<div class="col col--onefourth valign__centered">
-					<a href="https://www.omnipointment.com/me">
+					<a href="https://omnipointment.github.io/team">
 						<img class="imageBubble link u-pullRight" data-hook="propic">
 					</a>
 					<!--<div data-anddom-display="" data-anddom-hidden="true" data-hook="dropdown" style="display: none;">
