--- a/ratings.html
+++ b/ratings.html
@@ -154,7 +154,7 @@
 				<div class="col col--onefourth u-fullHeight u-textLeft"></div>
 				<div class="col col--onehalf valign__centered">
 					<div class="logo logo--white u-centerBlock" data-hook="logo">
-						<a onclick="window.location = window.location.origin + window.location.pathname;" class="u-fullHeight u-fullWidth u-centerBlock"></a>
+						<a onclick="window.location = window.location.origin + '/team.html' + window.location.search;" class="u-fullHeight u-fullWidth u-centerBlock"></a>
 					</div>
 				</div>
 				<div class="col col--onefourth valign__centered"></div>
