--- a/studentreport.html
+++ b/studentreport.html
@@ -187,6 +187,10 @@
 				min-height: 80px;
 			}
 
+			.legend-p {
+				margin: 20px;
+			}
+
 		</style>
 	</head>
 	<body class="body body--landing">
@@ -226,6 +230,7 @@
 							<div class="legend-explain">Average rating for your whole team.</div>
 						</div>
 					</div>
+					<p class="legend-p">Scale: 0 = Below Expectations, 5 = Meets Expectations, 10 = Exceeds Expectations</p>
 					<div id="section-ratings" class="row row--condensed"></div>
 				</div>
 			</div>
