Rough printing capability

--- a/studentreport.html
+++ b/studentreport.html
@@ -191,6 +191,31 @@
 				margin: 20px;
 			}
 
+			.print-format {
+				padding: 0;
+				height: initial;
+				min-height: 0;
+			}
+
+			.print-format header {
+				display: none;
+			}
+
+			.print-format #page {
+				padding: 0;
+				height: initial;
+				min-height: 0;
+			}
+
+			.print-format .col--onethird-sm {
+				background: orange;
+			}
+
+			.print-format .category {
+				padding: 10px !important;
+			}
+
+
 		</style>
 	</head>
 	<body class="body body--landing">
@@ -236,11 +261,11 @@
 			</div>
 
 			<div class="row row--condensed">
-				<div class="col col--onehalf-sm">
+				<div class="half-section col col--onehalf-sm">
 					<h1 class="report-heading">Feedback</h1>
 					<div id="section-feedback"></div>
 				</div>
-				<div class="col col--onehalf-sm">
+				<div class="half-section col col--onehalf-sm">
 					<h1 class="report-heading">Growth</h1>
 					<p class="u-textLeft">We analyzed some ways for you to become a stronger member of your team. Strive to be the kind of person who:</p>
 					<div id="section-improvement"></div>
